# Achtung--die-Kurve-

./: .gitattributes  .gitignore  Dockerfile  Makefile  Makefile.am  Makefile.in  PROTOCOL  README  README-server  TODOS & IDEAS  TOUCH  config.h  config.status  configure  configure.ac  libtool
cjson/: cJSON.h.gch
client/: DOM.js  Editor.js  GameEngine.js  InputController.js  Pencil.js  Player.js  alt.css  base.css  canvaslayers.js  communication.js  config.js  config.js~  game.js  game.js~  index.html  index.html~  minified.js  misc.js  new.css  style.css  wide.css
lib/: Makefile  Makefile.am  Makefile.in  handshake.c  kurve-server.c  libwebsockets.h  libwebsockets.la  libwebsockets_la-base64-decode.lo  libwebsockets_la-client-handshake.lo  libwebsockets_la-extension-deflate-stream.lo  libwebsockets_la-extension.lo  libwebsockets_la-handshake.lo  libwebsockets_la-libwebsockets.lo  libwebsockets_la-md5.lo  libwebsockets_la-parsers.lo  libwebsockets_la-sha-1.lo  private-libwebsockets.h
server/: Makefile  Makefile.am  Makefile.in  ai.c  benchmarks.c  collision-detection.c  game-system.c  game.c  game.c~  helper.c  kurveserver  libwebsockets-test-server  pencil.c  server.c  server.h  test-server.c
server/.deps/: libwebsockets_test_server-test-server.Po
server/.libs/: libwebsockets-test-server  lt-libwebsockets-test-server
server/cjson/: cJSON.c  cJSON.h  test
test-server/: .gitignore  Makefile  Makefile.am  Makefile.in  ai.c  benchmarks.c  compile.sh  compilebench.sh  game-system.c  game.c  helper.c  pencil.c  server.h  test-server.c  test-server.c~
(+19 files in other folders)
